@@ -34,7 +34,7 @@ int tagsistant_mkdir(const char *path, mode_t mode)
 	TAGSISTANT_START("MKDIR on %s [mode: %d]", path, mode);
 
 	// build querytree
-	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 1);
+	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 1, 1);
 
 	// -- malformed --
 	if (QTREE_IS_MALFORMED(qtree)) {
