@@ -34,7 +34,7 @@ int tagsistant_mknod(const char *path, mode_t mode, dev_t rdev)
 	TAGSISTANT_START("MKNOD on %s [mode: %u rdev: %u]", path, mode, (unsigned int) rdev);
 
 	// build querytree
-	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 1);
+	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 1, 1);
 
 	// -- malformed --
 	if (QTREE_IS_MALFORMED(qtree))
