@@ -32,7 +32,7 @@ int tagsistant_truncate(const char *path, off_t size)
 
 	TAGSISTANT_START("TRUNCATE on %s [size: %lu]", path, (long unsigned int) size);
 
-	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 0);
+	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 0, 1);
 
 	// -- malformed --
 	if (QTREE_IS_MALFORMED(qtree)) TAGSISTANT_ABORT_OPERATION(ENOENT);
