@@ -33,7 +33,7 @@ int tagsistant_utime(const char *path, struct utimbuf *buf)
 
 	TAGSISTANT_START("UTIME on %s", path);
 
-	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 0);
+	tagsistant_querytree *qtree = tagsistant_querytree_new(path, 0, 0, 1);
 
 	// -- malformed --
 	if (QTREE_IS_MALFORMED(qtree)) TAGSISTANT_ABORT_OPERATION(ENOENT);
