@@ -28,6 +28,11 @@
     in the repository and a new one is created, the tags of the
 	new one are applied to the existing object
 
+  - added a new boolean parameter to tagsistant_querytree_new() to
+    explicitly ask for a database connection; where the function
+	gets called twice in one operation (rename, symlink, link, ...)
+	one call will avoid the database connection creation
+
 0.6.1:
   - tag_id cache wasn't invalidated when a tag was renamed. Fixed.
     Thanks to Chiffa for reporting the bug.
